# django-next-cookie-cutter

./: .gitignore  .prettierrc  Brewfile  Makefile  README.md  docker-compose.yml  justfile  manage.py  pyproject.toml
server/: settings.py
server/common/models/: base_model.py
server/server/: settings.py
server/todo/: apps.py  models.py
server/todo/migrations/: 0001_initial.py  0002_initial.py
server/user/: apps.py  models.py
server/user/migrations/: 0001_initial.py
