[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | buck-out
  | migrations
)/
'''

[tool.poetry]
name = "django-next-cookie-cutter"
version = "0.1.0"
description = ""
authors = ["fordneild <hanfordn35@gmail.com>"]
readme = "README.md"
packages = [{include = "django_next_cookie_cutter"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"
django-environ = "^0.9.0"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
